Fix small profile page alignment bug

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -111,6 +111,7 @@
   .current-recommendations-details {
     width: 55%;
     float: left;
+    margin-top: 0px;
     /* border: 1px solid purple; */
   }
 
@@ -573,6 +574,11 @@
     border: 1px solid #777;
     padding: 30px;
     width: 85%;
+  }
+
+
+  #profile-sidebar-info {
+    padding: 15px;
   }
 
   .profile-section-row {
